# Mandelbrot

./: .gitignore  CMakeLists.txt  Config.h.in  LICENSE  README.md
cmake/: Info.plist
include/: App.hpp  Canvas.hpp  LeftPanel.hpp  RootWindow.hpp
mandelbrotlib/: CMakeLists.txt
mandelbrotlib/include/: complex_number.hpp  mandelbrot.hpp
mandelbrotlib/src/: CMakeLists.txt  complex_number.cpp  mandelbrot.cpp
mandelbrotlib/test/: CMakeLists.txt
src/: App.cpp  CMakeLists.txt  Canvas.cpp  ComplexNumber.cpp  LeftPanel.cpp  Mandelbrot.cpp  RootWindow.cpp
src/include/: App.h  Canvas.h  ComplexNumber.h  Mandelbrot.h  RootWindow.h
tests/: CMakeLists.txt  ComplexNumberTest.cpp  MandelbrotTest.cpp  complex_number.cpp  main.cpp  mandelbrot.cpp  test_main.cpp
tests/include/: ComplexNumberTest.h  MandelbrotTest.h
