CMAKE_MINIMUM_REQUIRED (VERSION 3.15)
PROJECT (Mandelbrot)

# Version
SET (Mandelbrot_VERSION_MAJOR 1)
SET (Mandelbrot_VERSION_MINOR 0)

# Config
CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/Config.h.in"
  "${PROJECT_SOURCE_DIR}/Config.h"
)

# Output Dir
# SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (tests)

ENABLE_TESTING ()
ADD_TEST (NAME MandelbrotTest COMMAND Test)
